Image fix
Fixed an issue where size of image overlapped other html content when increasing user view width.

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,8 @@ main .card {
 
 main img {
   width: 100%;
+  height: 200px;
+  margin-bottom: 0.5em;
 }
 
 main h3,
